# rcrd

./: Cargo.toml  demo.json  demo1.json
src/: cli.rs  main.rs  utils.rs
src/export/: bitmap.rs  gif.rs
src/recording/: mod.rs  playback.rs  recorder.rs
src/terminal/: colors.rs  mod.rs  virtual_term.rs
