[package]
name = "rcrd"
version = "0.1.0"
edition = "2021"

[dependencies]
ctrlc = "3.2"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gif = "0.12"
image = "0.24"
termion = "2.0"
crossterm = "0.26"
ansi_colours = "1.1"
syntect = "5.0"                                    # For syntax highlighting
tempfile = "3.5"
fontdue = "0.7"
